--- a/client/src/components/LandingPage.css
+++ b/client/src/components/LandingPage.css
@@ -5,6 +5,7 @@ body, html {
 }
 
 .section {
+    overflow: auto;
     height: 100vh;
     display: flex;
     flex-direction: column;
